# VeyonChat

./: CMakeLists.txt  ChatPlugin.cpp  MasterChatDialog.cpp  README.md  plugin.json
.github/workflows/: build.yml
resources/: resources.qrc
src/: ChatPlugin.h  ClientChatDialog.cpp  ClientChatDialog.h  VeyonChat.pro
